parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOISPONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> lista_variaveis , var
Rule 10    lista_variaveis -> var
Rule 11    var -> ID
Rule 12    var -> ID indice
Rule 13    indice -> indice ECOLCHE expressao DCOLCHE
Rule 14    indice -> ECOLCHE expressao DCOLCHE
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    cabecalho -> ID EPAREN lista_parametros DPAREN corpo FIM
Rule 20    lista_parametros -> lista_parametros VIRGULA parametro
Rule 21    lista_parametros -> parametro
Rule 22    lista_parametros -> vazio
Rule 23    parametro -> tipo DOISPONTOS ID
Rule 24    parametro -> parametro ECOLCHE DCOLCHE
Rule 25    corpo -> corpo acao
Rule 26    corpo -> vazio
Rule 27    acao -> expressao
Rule 28    acao -> declaracao_variaveis
Rule 29    acao -> SE
Rule 30    acao -> REPITA
Rule 31    acao -> LEIA
Rule 32    acao -> ESCREVA
Rule 33    acao -> RETORNA
Rule 34    acao -> error
Rule 35    se -> SE expressao ENTAO corpo FIM
Rule 36    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 37    repita -> REPITA corpo ATE expressao
Rule 38    atribuicao -> var ATRIBUICAO expressao
Rule 39    leia -> LEIA EPAREN var DPAREN
Rule 40    escreva -> ESCREVA EPAREN expressao DPAREN
Rule 41    retorna -> RETORNA EPAREN expressao DPAREN
Rule 42    expressao -> expressao_logica
Rule 43    expressao -> atribuicao
Rule 44    expressao_logica -> expressao_simples
Rule 45    expressao_logica -> expressao_logica operador_logico expressao_simples
Rule 46    expressao_simples -> expressao_aditiva
Rule 47    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 48    expressao_aditiva -> expressao_multiplicativa
Rule 49    expressao_aditiva -> expressao_aditiva operador_soma expressao_multiplicativa
Rule 50    expressao_multiplicativa -> expressao_unaria
Rule 51    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 52    expressao_unaria -> fator
Rule 53    expressao_unaria -> operador_soma fator
Rule 54    expressao_unaria -> operador_negacao fator
Rule 55    operador_relacional -> MENORQ
Rule 56    operador_relacional -> MAIORQ
Rule 57    operador_relacional -> IGUAL
Rule 58    operador_relacional -> DESIGUAL
Rule 59    operador_relacional -> MENORIGUAL
Rule 60    operador_relacional -> MAIORIGUAL
Rule 61    operador_soma -> ADICAO
Rule 62    operador_soma -> SUBTRACAO
Rule 63    operador_logico -> ELOGICO
Rule 64    operador_logico -> OULOGICO
Rule 65    operador_negacao -> NEGACAO
Rule 66    operador_multiplicacao -> MULTIPLICACAO
Rule 67    operador_multiplicacao -> DIVISAO
Rule 68    fator -> EPAREN expressao DPAREN
Rule 69    fator -> var
Rule 70    fator -> chamada_funcao
Rule 71    fator -> numero
Rule 72    numero -> NUM_INTEIRO
Rule 73    numero -> NUM_FLUTUANTE
Rule 74    numero -> NUM_CIENTIFICO
Rule 75    chamada_funcao -> ID EPAREN lista_argumentos DPAREN
Rule 76    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 77    lista_argumentos -> expressao
Rule 78    lista_argumentos -> vazio
Rule 79    vazio -> <empty>

Terminals, with rules where they appear

,                    : 9
ADICAO               : 61
ATE                  : 37
ATRIBUICAO           : 38
DCOLCHE              : 13 14 24
DESIGUAL             : 58
DIVISAO              : 67
DOISPONTOS           : 7 23
DPAREN               : 19 39 40 41 68 75
ECOLCHE              : 13 14 24
ELOGICO              : 63
ENTAO                : 35 36
EPAREN               : 19 39 40 41 68 75
ESCREVA              : 32 40
FIM                  : 19 35 36
FLUTUANTE            : 16
ID                   : 11 12 19 23 75
IGUAL                : 57
INTEIRO              : 15
LEIA                 : 31 39
MAIORIGUAL           : 60
MAIORQ               : 56
MENORIGUAL           : 59
MENORQ               : 55
MULTIPLICACAO        : 66
NEGACAO              : 65
NUM_CIENTIFICO       : 74
NUM_FLUTUANTE        : 73
NUM_INTEIRO          : 72
OULOGICO             : 64
REPITA               : 30 37
RETORNA              : 33 41
SE                   : 29 35 36
SENAO                : 36
SUBTRACAO            : 62
VIRGULA              : 20 76
error                : 34

Nonterminals, with rules where they appear

acao                 : 25
atribuicao           : 8 43
cabecalho            : 17 18
chamada_funcao       : 70
corpo                : 19 25 35 36 36 37
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 28
escreva              : 
expressao            : 13 14 27 35 36 37 38 40 41 68 76 77
expressao_aditiva    : 46 47 49
expressao_logica     : 42 45
expressao_multiplicativa : 48 49 51
expressao_simples    : 44 45 47
expressao_unaria     : 50 51
fator                : 52 53 54
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 
lista_argumentos     : 75 76
lista_declaracoes    : 1 2
lista_parametros     : 19 20
lista_variaveis      : 7 9
numero               : 71
operador_logico      : 45
operador_multiplicacao : 51
operador_negacao     : 54
operador_relacional  : 47
operador_soma        : 49 53
parametro            : 20 21 24
programa             : 0
repita               : 
retorna              : 
se                   : 
tipo                 : 7 17 23
var                  : 9 10 38 39 69
vazio                : 22 26 78

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOISPONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID EPAREN lista_parametros DPAREN corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 8

    declaracao_variaveis           shift and go to state 1
    programa                       shift and go to state 9
    atribuicao                     shift and go to state 2
    tipo                           shift and go to state 3
    declaracao_funcao              shift and go to state 5
    cabecalho                      shift and go to state 4
    inicializacao_variaveis        shift and go to state 12
    declaracao                     shift and go to state 6
    var                            shift and go to state 7
    lista_declaracoes              shift and go to state 13

state 1

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    ID              reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 2

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    ID              reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 3

    (7) declaracao_variaveis -> tipo . DOISPONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (19) cabecalho -> . ID EPAREN lista_parametros DPAREN corpo FIM

    DOISPONTOS      shift and go to state 14
    ID              shift and go to state 16

    cabecalho                      shift and go to state 15

state 4

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    ID              reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 5

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 6

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    ID              reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 7

    (38) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 17


state 8

    (19) cabecalho -> ID . EPAREN lista_parametros DPAREN corpo FIM
    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ECOLCHE expressao DCOLCHE
    (14) indice -> . ECOLCHE expressao DCOLCHE

    EPAREN          shift and go to state 20
    ATRIBUICAO      reduce using rule 11 (var -> ID .)
    ECOLCHE         shift and go to state 18

    indice                         shift and go to state 19

state 9

    (0) S' -> programa .



state 10

    (15) tipo -> INTEIRO .

    DOISPONTOS      reduce using rule 15 (tipo -> INTEIRO .)
    ID              reduce using rule 15 (tipo -> INTEIRO .)


state 11

    (16) tipo -> FLUTUANTE .

    DOISPONTOS      reduce using rule 16 (tipo -> FLUTUANTE .)
    ID              reduce using rule 16 (tipo -> FLUTUANTE .)


state 12

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    ID              reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 13

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOISPONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . ID EPAREN lista_parametros DPAREN corpo FIM
    (11) var -> . ID
    (12) var -> . ID indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    ID              shift and go to state 8

    declaracao_variaveis           shift and go to state 1
    atribuicao                     shift and go to state 2
    tipo                           shift and go to state 3
    declaracao_funcao              shift and go to state 5
    cabecalho                      shift and go to state 4
    inicializacao_variaveis        shift and go to state 12
    declaracao                     shift and go to state 21
    var                            shift and go to state 7

state 14

    (7) declaracao_variaveis -> tipo DOISPONTOS . lista_variaveis
    (9) lista_variaveis -> . lista_variaveis , var
    (10) lista_variaveis -> . var
    (11) var -> . ID
    (12) var -> . ID indice

    ID              shift and go to state 22

    lista_variaveis                shift and go to state 23
    var                            shift and go to state 24

state 15

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    ID              reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 16

    (19) cabecalho -> ID . EPAREN lista_parametros DPAREN corpo FIM

    EPAREN          shift and go to state 20


state 17

    (38) atribuicao -> var ATRIBUICAO . expressao
    (42) expressao -> . expressao_logica
    (43) expressao -> . atribuicao
    (44) expressao_logica -> . expressao_simples
    (45) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_simples -> . expressao_aditiva
    (47) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (48) expressao_aditiva -> . expressao_multiplicativa
    (49) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (50) expressao_multiplicativa -> . expressao_unaria
    (51) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (52) expressao_unaria -> . fator
    (53) expressao_unaria -> . operador_soma fator
    (54) expressao_unaria -> . operador_negacao fator
    (68) fator -> . EPAREN expressao DPAREN
    (69) fator -> . var
    (70) fator -> . chamada_funcao
    (71) fator -> . numero
    (61) operador_soma -> . ADICAO
    (62) operador_soma -> . SUBTRACAO
    (65) operador_negacao -> . NEGACAO
    (75) chamada_funcao -> . ID EPAREN lista_argumentos DPAREN
    (72) numero -> . NUM_INTEIRO
    (73) numero -> . NUM_FLUTUANTE
    (74) numero -> . NUM_CIENTIFICO

    ID              shift and go to state 32
    EPAREN          shift and go to state 36
    ADICAO          shift and go to state 29
    SUBTRACAO       shift and go to state 45
    NEGACAO         shift and go to state 42
    NUM_INTEIRO     shift and go to state 31
    NUM_FLUTUANTE   shift and go to state 27
    NUM_CIENTIFICO  shift and go to state 25

    operador_soma                  shift and go to state 40
    expressao_multiplicativa       shift and go to state 34
    fator                          shift and go to state 35
    atribuicao                     shift and go to state 26
    expressao_aditiva              shift and go to state 38
    chamada_funcao                 shift and go to state 39
    expressao_logica               shift and go to state 28
    expressao_simples              shift and go to state 37
    var                            shift and go to state 30
    expressao                      shift and go to state 41
    expressao_unaria               shift and go to state 43
    operador_negacao               shift and go to state 33
    numero                         shift and go to state 44

state 18

    (14) indice -> ECOLCHE . expressao DCOLCHE
    (42) expressao -> . expressao_logica
    (43) expressao -> . atribuicao
    (44) expressao_logica -> . expressao_simples
    (45) expressao_logica -> . expressao_logica operador_logico expressao_simples
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_simples -> . expressao_aditiva
    (47) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (11) var -> . ID
    (12) var -> . ID indice
    (48) expressao_aditiva -> . expressao_multiplicativa
    (49) expressao_aditiva -> . expressao_aditiva operador_soma expressao_multiplicativa
    (50) expressao_multiplicativa -> . expressao_unaria
    (51) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (52) expressao_unaria -> . fator
    (53) expressao_unaria -> . operador_soma fator
    (54) expressao_unaria -> . operador_negacao fator
    (68) fator -> . EPAREN expressao DPAREN
    (69) fator -> . var
    (70) fator -> . chamada_funcao
    (71) fator -> . numero
    (61) operador_soma -> . ADICAO
    (62) operador_soma -> . SUBTRACAO
    (65) operador_negacao -> . NEGACAO
    (75) chamada_funcao -> . ID EPAREN lista_argumentos DPAREN
    (72) numero -> . NUM_INTEIRO
    (73) numero -> . NUM_FLUTUANTE
    (74) numero -> . NUM_CIENTIFICO

    ID              shift and go to state 32
    EPAREN          shift and go to state 36
    ADICAO          shift and go to state 29
    SUBTRACAO       shift and go to state 45
    NEGACAO         shift and go to state 42
    NUM_INTEIRO     shift and go to state 31
    NUM_FLUTUANTE   shift and go to state 27
    NUM_CIENTIFICO  shift and go to state 25

    operador_soma                  shift and go to state 40
    expressao_multiplicativa       shift and go to state 34
    fator                          shift and go to state 35
    atribuicao                     shift and go to state 26
    expressao_aditiva              shift and go to state 38
    chamada_funcao                 shift and go to state 39
    expressao_logica               shift and go to state 28
    expressao_simples              shift and go to state 37
    var                            shift and go to state 30
    expressao                      shift and go to state 46
    expressao_unaria               shift and go to state 43
    operador_negacao               shift and go to state 33
    numero                         shift and go to state 44

state 19

    (12) var -> ID indice .
    (13) indice -> indice . ECOLCHE expressao DCOLCHE

    ATRIBUICAO      reduce using rule 12 (var -> ID indice .)
    MULTIPLICACAO   reduce using rule 12 (var -> ID indice .)
    DIVISAO         reduce using rule 12 (var -> ID indice .)
    ADICAO          reduce using rule 12 (var -> ID indice .)
    SUBTRACAO       reduce using rule 12 (var -> ID indice .)
    MENORQ          reduce using rule 12 (var -> ID indice .)
    MAIORQ          reduce using rule 12 (var -> ID indice .)
    IGUAL           reduce using rule 12 (var -> ID indice .)
    DESIGUAL        reduce using rule 12 (var -> ID indice .)
    MENORIGUAL      reduce using rule 12 (var -> ID indice .)
    MAIORIGUAL      reduce using rule 12 (var -> ID indice .)
    ELOGICO         reduce using rule 12 (var -> ID indice .)
    OULOGICO        reduce using rule 12 (var -> ID indice .)
    INTEIRO         reduce using rule 12 (var -> ID indice .)
    FLUTUANTE       reduce using rule 12 (var -> ID indice .)
    ID              reduce using rule 12 (var -> ID indice .)
    $end            reduce using rule 12 (var -> ID indice .)
    DCOLCHE         reduce using rule 12 (var -> ID indice .)
    DPAREN          reduce using rule 12 (var -> ID indice .)
    VIRGULA         reduce using rule 12 (var -> ID indice .)
    FIM             reduce using rule 12 (var -> ID indice .)
    SE              reduce using rule 12 (var -> ID indice .)
    REPITA          reduce using rule 12 (var -> ID indice .)
    LEIA            reduce using rule 12 (var -> ID indice .)
    ESCREVA         reduce using rule 12 (var -> ID indice .)
    RETORNA         reduce using rule 12 (var -> ID indice .)
    error           reduce using rule 12 (var -> ID indice .)
    EPAREN          reduce using rule 12 (var -> ID indice .)
    NEGACAO         reduce using rule 12 (var -> ID indice .)
    NUM_INTEIRO     reduce using rule 12 (var -> ID indice .)
    NUM_FLUTUANTE   reduce using rule 12 (var -> ID indice .)
    NUM_CIENTIFICO  reduce using rule 12 (var -> ID indice .)
    ,               reduce using rule 12 (var -> ID indice .)
    ECOLCHE         shift and go to state 47


state 20

    (19) cabecalho -> ID EPAREN . lista_parametros DPAREN corpo FIM
    (20) lista_parametros -> . lista_parametros VIRGULA parametro
    (21) lista_parametros -> . parametro
    (22) lista_parametros -> . vazio
    (23) parametro -> . tipo DOISPONTOS ID
    (24) parametro -> . parametro ECOLCHE DCOLCHE
    (79) vazio -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE

    DPAREN          reduce using rule 79 (vazio -> .)
    VIRGULA         reduce using rule 79 (vazio -> .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11

    vazio                          shift and go to state 51
    lista_parametros               shift and go to state 50
    tipo                           shift and go to state 49
    parametro                      shift and go to state 48

state 21

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    ID              reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 22

    (11) var -> ID .
    (12) var -> ID . indice
    (13) indice -> . indice ECOLCHE expressao DCOLCHE
    (14) indice -> . ECOLCHE expressao DCOLCHE

    ,               reduce using rule 11 (var -> ID .)
    INTEIRO         reduce using rule 11 (var -> ID .)
    FLUTUANTE       reduce using rule 11 (var -> ID .)
    ID              reduce using rule 11 (var -> ID .)
    $end            reduce using rule 11 (var -> ID .)
    FIM             reduce using rule 11 (var -> ID .)
    SE              reduce using rule 11 (var -> ID .)
    REPITA          reduce using rule 11 (var -> ID .)
    LEIA            reduce using rule 11 (var -> ID .)
    ESCREVA         reduce using rule 11 (var -> ID .)
    RETORNA         reduce using rule 11 (var -> ID .)
    error           reduce using rule 11 (var -> ID .)
    EPAREN          reduce using rule 11 (var -> ID .)
    ADICAO          reduce using rule 11 (var -> ID .)
    SUBTRACAO       reduce using rule 11 (var -> ID .)
    NEGACAO         reduce using rule 11 (var -> ID .)
    NUM_INTEIRO     reduce using rule 11 (var -> ID .)
    NUM_FLUTUANTE   reduce using rule 11 (var -> ID .)
    NUM_CIENTIFICO  reduce using rule 11 (var -> ID .)
    ECOLCHE         shift and go to state 18

    indice                         shift and go to state 19

state 23

    (7) declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .
    (9) lista_variaveis -> lista_variaveis . , var

    INTEIRO         reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    FLUTUANTE       reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    ID              reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    $end            reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    FIM             reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    SE              reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    REPITA          reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    LEIA            reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    ESCREVA         reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    RETORNA         reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    error           reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    EPAREN          reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    ADICAO          reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    SUBTRACAO       reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    NEGACAO         reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    NUM_INTEIRO     reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    NUM_FLUTUANTE   reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    NUM_CIENTIFICO  reduce using rule 7 (declaracao_variaveis -> tipo DOISPONTOS lista_variaveis .)
    ,               shift and go to state 52


state 24

    (10) lista_variaveis -> var .

    ,               reduce using rule 10 (lista_variaveis -> var .)
    INTEIRO         reduce using rule 10 (lista_variaveis -> var .)
    FLUTUANTE       reduce using rule 10 (lista_variaveis -> var .)
    ID              reduce using rule 10 (lista_variaveis -> var .)
    $end            reduce using rule 10 (lista_variaveis -> var .)
    FIM             reduce using rule 10 (lista_variaveis -> var .)
    SE              reduce using rule 10 (lista_variaveis -> var .)
    REPITA          reduce using rule 10 (lista_variaveis -> var .)
    LEIA            reduce using rule 10 (lista_variaveis -> var .)
    ESCREVA         reduce using rule 10 (lista_variaveis -> var .)
    RETORNA         reduce using rule 10 (lista_variaveis -> var .)
    error           reduce using rule 10 (lista_variaveis -> var .)
    EPAREN          reduce using rule 10 (lista_variaveis -> var .)
    ADICAO          reduce using rule 10 (lista_variaveis -> var .)
    SUBTRACAO       reduce using rule 10 (lista_variaveis -> var .)
    NEGACAO         reduce using rule 10 (lista_variaveis -> var .)
    NUM_INTEIRO     reduce using rule 10 (lista_variaveis -> var .)
    NUM_FLUTUANTE   reduce using rule 10 (lista_variaveis -> var .)
    NUM_CIENTIFICO  reduce using rule 10 (lista_variaveis -> var .)


state 25

    (74) numero -> NUM_CIENTIFICO .
